<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="myName" type="com.daemonvision.aboutmedatabinding.MyName"/>
    </data>
    <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingStart="@dimen/layout_padding"
              android:paddingEnd="@dimen/layout_padding">

        <TextView
                android:id="@+id/name_text"
                android:background="@color/colorAccent"
                android:paddingBottom="@dimen/small_padding"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={myName.name}"
                android:textAlignment="center" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nickname_edit" android:hint="@string/what_is_your_nickname"
                android:textAlignment="center" style="@style/NameStyle"/>
        <Button
                android:text="@string/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/done_button"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_margin="@dimen/layout_margin"
                android:fontFamily="@font/roboto" />
        <ImageView
                android:id="@+id/star_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:contentDescription="@string/yellow_star"
                app:srcCompat="@android:drawable/btn_star_big_on" />

        <ScrollView
                android:id="@+id/bio_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/speak"
                        app:srcCompat="@android:drawable/ic_btn_speak_now" />

                <TextView
                        android:id="@+id/bio_text"
                        style="@style/NameStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.2"
                        android:text="@string/bio" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>